--- a/templates/student/lesson/C13.html
+++ b/templates/student/lesson/C13.html
@@ -103,7 +103,7 @@
 53503534226472524250874054075591789781264330331690
 </pre></div>
 </div>
-<p><A href="/static/file/numbers3.txt">下載檔案</a></p>
+<p><A href="/static/files/euler/numbers3.txt">下載檔案</a></p>
 <p>練習1：讀取數字進串列</p>
 <div class="highlight-python"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
