--- a/templates/student/lesson/G04.html
+++ b/templates/student/lesson/G04.html
@@ -1,6 +1,4 @@
-    <div id="doc" class="markdown-body container-fluid" style="position: relative;"><h1 id="建立專案"><a class="anchor hidden-xs" href="#建立專案" title="建立專案"><span class="octicon octicon-link"></span></a>建立專案</h1><p>在終端機中按下Ctrl+C中斷程式執行，回到命令提示模式。</p><p>(1)在終端機中下達指令建立一個新的專案</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
-<span data-linenumber="2"></span></div><div class="code"><span class="hljs-built_in">cd</span> ~/workspace
-django-admin.py startproject mysite
+    <div id="doc" class="markdown-body container-fluid" style="position: relative;"><h1 id="建立專案"><a class="anchor hidden-xs" href="#建立專案" title="建立專案"><span class="octicon octicon-link"></span></a>建立專案</h1><p>在終端機中按下Ctrl+C中斷程式執行，回到命令提示模式。</p><p>(1)在終端機中下達指令建立一個新的專案</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span></div><div class="code">django-admin.py startproject mysite
 </div></div></code></pre><p>打完指令後，會產生一個mysite的資料夾</p><pre><code class="bash hljs">mysite/
     manage.py
     mysite/
@@ -15,8 +13,8 @@ django-admin.py startproject mysite
 TIME_ZONE = <span class="hljs-string">'Asia/Taipei'</span>
 </div></div></code></pre><p>(3)啟動 django</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
 <span data-linenumber="2"></span></div><div class="code"><span class="hljs-built_in">cd</span> mysite
-sudo python3 manage.py runserver 0.0.0.0:80
-</div></div></code></pre><p>(4)在終端機會看到以下的訊息</p><p><img src="https://i.imgur.com/rNINAPk.png" alt=""></p><p>(5)django網站畫面如下：</p><p><img src="https://i.imgur.com/UGuUHZa.png" alt=""></p><h1 id="建立應用程式"><a class="anchor hidden-xs" href="#建立應用程式" title="建立應用程式"><span class="octicon octicon-link"></span></a>建立應用程式</h1><p>我們要建立一個圖文展示的應用程式</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span></div><div class="code">python3 manage.py startapp show
+python manage.py runserver 0.0.0.0:80
+</div></div></code></pre><p>(4)在終端機會看到以下的訊息</p><p><img src="https://i.imgur.com/rNINAPk.png" alt=""></p><p>(5)django網站畫面如下：</p><p><img src="https://i.imgur.com/UGuUHZa.png" alt=""></p><h1 id="建立應用程式"><a class="anchor hidden-xs" href="#建立應用程式" title="建立應用程式"><span class="octicon octicon-link"></span></a>建立應用程式</h1><p>我們要建立一個圖文展示的應用程式</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span></div><div class="code">python manage.py startapp show
 </div></div></code></pre><p>下了這個指令後，會在mysite底下新增一個show資料夾，檔案結構如下：</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
 <span data-linenumber="2"></span>
 <span data-linenumber="3"></span>
@@ -53,9 +51,9 @@ sudo python3 manage.py runserver 0.0.0.0:80
         <span class="hljs-string">'django.contrib.sessions'</span>,
         <span class="hljs-string">'django.contrib.messages'</span>,
         <span class="hljs-string">'django.contrib.staticfiles'</span>,
-        <span class="hljs-string">'show.apps.ShowConfig'</span>,
+        <span class="hljs-string">'show'</span>,
 )
-</div></div></code></pre><p>要完成一個可以回應給使用者的畫面，需要有兩個步驟：</p><p>(1)設定網址(<a href="http://urls.py" target="_blank" done="">urls.py</a>)</p><p>(2)撰寫視圖函式(<a href="http://views.py" target="_blank" done="">views.py</a>)</p><p>打開 mysite/mysite/urls.py 裡面已有的設定如下：</p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
+</div></div></code></pre><p>要完成一個可以回應給使用者的畫面，需要有兩個步驟：</p><p>(1)設定網址(<a href="http://urls.py" target="_blank">urls.py</a>)</p><p>(2)撰寫視圖函式(<a href="http://views.py" target="_blank">views.py</a>)</p><p>打開 mysite/mysite/urls.py 裡面已有的設定如下：</p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
 <span data-linenumber="2"></span>
 <span data-linenumber="3"></span>
 <span data-linenumber="4"></span>
@@ -92,8 +90,8 @@ urlpatterns = [
 
 <span class="hljs-function"><span class="hljs-keyword">def</span> <span class="hljs-title">homepage</span><span class="hljs-params">(request)</span>:</span>
     <span class="hljs-keyword">return</span> HttpResponse(<span class="hljs-string">'歡迎光臨我的網站'</span>)
-</div></div></code></pre><p>試著打開你的網站看看結果。</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span></div><div class="code">sudo python3 manage.py runserver 0.0.0.0:80
-</div></div></code></pre><p><img src="https://i.imgur.com/VtUe53Q.png" alt=""></p><h2 id="使用模版"><a class="anchor hidden-xs" href="#使用模版" title="使用模版"><span class="octicon octicon-link"></span></a>使用模版</h2><p>(1)建立模版目錄</p><p><img src="https://i.imgur.com/CbKP6tk.png" alt=""></p><p><img src="https://i.imgur.com/OnkHSVS.png" alt=""></p><p>(2)修改mysite/mysite/settings.py <ins>第4行</ins></p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
+</div></div></code></pre><p>試著打開你的網站看看結果。</p><pre><code class="bash hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span></div><div class="code">python manage.py runserver 0.0.0.0:80
+</div></div></code></pre><p><img src="https://i.imgur.com/VtUe53Q.png" alt=""></p><h2 id="使用模版"><a class="anchor hidden-xs" href="#使用模版" title="使用模版"><span class="octicon octicon-link"></span></a>使用模版</h2><p>(1)建立模版目錄</p><p>templates</p><p>(2)修改mysite/mysite/settings.py <ins>第4行</ins></p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
 <span data-linenumber="2"></span>
 <span data-linenumber="3"></span>
 <span data-linenumber="4"></span>
@@ -142,7 +140,12 @@ urlpatterns = [
 
 <span class="hljs-function"><span class="hljs-keyword">def</span> <span class="hljs-title">homepage</span><span class="hljs-params">(request)</span>:</span>
     <span class="hljs-keyword">return</span> render_to_response(<span class="hljs-string">'index.html'</span>)
-</div></div></code></pre><h2 id="餐廳網站"><a class="anchor hidden-xs" href="#餐廳網站" title="餐廳網站"><span class="octicon octicon-link"></span></a>餐廳網站</h2><p>(1)建立靜態圖片目錄 mysite/show/static/show</p><p>(2)上傳圖片到雲端主機目錄中。</p><p><img src="https://i.imgur.com/Uj33k7W.png" alt=""></p><p><img src="https://i.imgur.com/X0wgFEg.png" alt="">food1.png</p><p><img src="https://i.imgur.com/OmT9F7W.png" alt="">food2.png</p><p><img src="https://i.imgur.com/XwYLjjs.png" alt="">food3.png</p><p>（3)修改 mysite/mysite/urls.py　 <ins>第6-7,11,12行</ins></p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
+</div></div></code></pre><h2 id="餐廳網站"><a class="anchor hidden-xs" href="#餐廳網站" title="餐廳網站"><span class="octicon octicon-link"></span></a>餐廳網站</h2><p>(1)建立靜態圖片目錄 mysite/static/images</p><p>修改mysite/settings.py，新增以下程式碼：</p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
+<span data-linenumber="2"></span>
+<span data-linenumber="3"></span></div><div class="code">STATICFILES_DIRS = [
+        os.path.join(BASE_DIR, <span class="hljs-string">"static"</span>),
+]
+</div></div></code></pre><p>(2)上傳圖片到目錄中。</p><p><img src="https://i.imgur.com/X0wgFEg.png" alt="">food1.png</p><p><img src="https://i.imgur.com/OmT9F7W.png" alt="">food2.png</p><p><img src="https://i.imgur.com/XwYLjjs.png" alt="">food3.png</p><p>（3)修改 mysite/mysite/urls.py　 <ins>第6-7,11,12行</ins></p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
 <span data-linenumber="2"></span>
 <span data-linenumber="3"></span>
 <span data-linenumber="4"></span>
@@ -150,33 +153,16 @@ urlpatterns = [
 <span data-linenumber="6"></span>
 <span data-linenumber="7"></span>
 <span data-linenumber="8"></span>
-<span data-linenumber="9"></span>
-<span data-linenumber="10"></span>
-<span data-linenumber="11"></span>
-<span data-linenumber="12"></span></div><div class="code"><span class="hljs-keyword">from</span> django.contrib <span class="hljs-keyword">import</span> admin
+<span data-linenumber="9"></span></div><div class="code"><span class="hljs-keyword">from</span> django.contrib <span class="hljs-keyword">import</span> admin
 <span class="hljs-keyword">from</span> django.urls <span class="hljs-keyword">import</span> path
 <span class="hljs-keyword">from</span> show <span class="hljs-keyword">import</span> views
-<span class="hljs-keyword">from</span> django.conf.urls <span class="hljs-keyword">import</span> include
-<span class="hljs-keyword">from</span> django.conf.urls.static <span class="hljs-keyword">import</span> static
-<span class="hljs-keyword">from</span> django.conf <span class="hljs-keyword">import</span> settings
 
 urlpatterns = [
     path(<span class="hljs-string">'admin/'</span>, admin.site.urls),
     path(<span class="hljs-string">''</span>, views.homepage), 
-    path(<span class="hljs-string">'show/'</span>, include(<span class="hljs-string">'show.urls'</span>)),  
-] + static(settings.STATIC_URL, document_root=settings.STATIC_ROOT)
-</div></div></code></pre><p>()新增檔案 mysite/show/urls.py</p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
-<span data-linenumber="2"></span>
-<span data-linenumber="3"></span>
-<span data-linenumber="4"></span>
-<span data-linenumber="5"></span>
-<span data-linenumber="6"></span></div><div class="code"><span class="hljs-keyword">from</span> django.urls <span class="hljs-keyword">import</span> path
-<span class="hljs-keyword">from</span> . <span class="hljs-keyword">import</span> views
-
-urlpatterns = [
-    path(<span class="hljs-string">'food/&lt;int:kind&gt;'</span>, views.food),   
+    path(<span class="hljs-string">'food'</span>, views.food),
 ]
-</div></div></code></pre><p>(5)修改 mysite/template/index.html <ins>第6-8行</ins></p><pre><code class="html hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
+</div></div></code></pre><p>(4)修改 mysite/template/index.html <ins>第6-8行</ins></p><pre><code class="html hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
 <span data-linenumber="2"></span>
 <span data-linenumber="3"></span>
 <span data-linenumber="4"></span>
@@ -190,9 +176,9 @@ urlpatterns = [
     <span class="hljs-tag">&lt;/<span class="hljs-name">head</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-name">body</span>&gt;</span>
         歡迎光臨我的網站<span class="hljs-tag">&lt;<span class="hljs-name">BR</span>&gt;</span>
-        &#123;% for food in foods %}
-        <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"/show/food/{{forloop.counter}}"</span>&gt;</span>{{food}}<span class="hljs-tag">&lt;/<span class="hljs-name">a</span>&gt;</span><span class="hljs-tag">&lt;<span class="hljs-name">BR</span>&gt;</span>
-        &#123;% endfor %}
+        <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"/food/1"</span>&gt;</span>1號餐<span class="hljs-tag">&lt;<span class="hljs-name">BR</span>&gt;</span>
+        <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"/food/2"</span>&gt;</span>2號餐<span class="hljs-tag">&lt;<span class="hljs-name">BR</span>&gt;</span>
+        <span class="hljs-tag">&lt;<span class="hljs-name">a</span> <span class="hljs-attr">href</span>=<span class="hljs-string">"/food/3"</span>&gt;</span>3號餐<span class="hljs-tag">&lt;<span class="hljs-name">BR</span>&gt;</span>        
     <span class="hljs-tag">&lt;/<span class="hljs-name">body</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">html</span>&gt;</span>
 </div></div></code></pre><p>(6)打開 mysite/show/views.py，修改為以下程式碼：</p><pre><code class="python hljs"><div class="wrapper"><div class="gutter linenumber"><span data-linenumber="1"></span>
@@ -202,13 +188,11 @@ urlpatterns = [
 <span data-linenumber="5"></span>
 <span data-linenumber="6"></span>
 <span data-linenumber="7"></span>
-<span data-linenumber="8"></span>
-<span data-linenumber="9"></span></div><div class="code"><span class="hljs-comment"># -*- coding: UTF-8 -*-</span>
+<span data-linenumber="8"></span></div><div class="code"><span class="hljs-comment"># -*- coding: UTF-8 -*-</span>
 <span class="hljs-keyword">from</span> django.shortcuts <span class="hljs-keyword">import</span> render_to_response
 
 <span class="hljs-function"><span class="hljs-keyword">def</span> <span class="hljs-title">homepage</span><span class="hljs-params">(request)</span>:</span>
-    foods = [<span class="hljs-string">'三明治套餐'</span>, <span class="hljs-string">'鬆餅套餐'</span>, <span class="hljs-string">'漢堡套餐'</span>]
-    <span class="hljs-keyword">return</span> render_to_response(<span class="hljs-string">'index.html'</span>, {<span class="hljs-string">'foods'</span>:foods})
+    <span class="hljs-keyword">return</span> render_to_response(<span class="hljs-string">'index.html'</span>)
   
 <span class="hljs-function"><span class="hljs-keyword">def</span> <span class="hljs-title">food</span><span class="hljs-params">(request, kind)</span>:</span>
     <span class="hljs-keyword">return</span> render_to_response(<span class="hljs-string">'food.html'</span>, {<span class="hljs-string">'kind'</span>:kind})  
@@ -223,8 +207,8 @@ urlpatterns = [
     <span class="hljs-tag">&lt;<span class="hljs-name">head</span>&gt;</span> 
     <span class="hljs-tag">&lt;/<span class="hljs-name">head</span>&gt;</span>
     <span class="hljs-tag">&lt;<span class="hljs-name">body</span>&gt;</span>
-      &#123;% load static %}
-       <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"&#123;% static 'show/food' %}{{kind}}.png"</span>&gt;</span>
+      您點的是{{kind}}號餐<span class="hljs-tag">&lt;<span class="hljs-name">BR</span>&gt;</span>
+      <span class="hljs-tag">&lt;<span class="hljs-name">img</span> <span class="hljs-attr">src</span>=<span class="hljs-string">"/static/images/food{{kind}}.png"</span>&gt;</span>
     <span class="hljs-tag">&lt;/<span class="hljs-name">body</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">html</span>&gt;</span>
 </div></div></code></pre><div dir="ltr" class="resize-sensor" style="position: absolute; left: -10px; top: -10px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"><div class="resize-sensor-expand" style="position: absolute; left: -10px; top: -10px; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"><div style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 100000px; height: 100000px;"></div></div><div class="resize-sensor-shrink" style="position: absolute; left: -10px; top: -10px; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"><div style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%"></div></div></div></div>
@@ -234,11 +218,10 @@ urlpatterns = [
                 <i class="fa fa-bars"></i>
             </a>
             <ul id="ui-toc" class="ui-toc-dropdown dropdown-menu" aria-labelledby="tocLabel">
-                <div class="toc"><ul class="nav"><li class=""><a href="#建立專案" title="建立專案">建立專案</a></li><li class=""><a href="#建立應用程式" title="建立應用程式">建立應用程式</a><ul class="nav"><li><a href="#使用模版" title="使用模版">使用模版</a></li><li class=""><a href="#餐廳網站" title="餐廳網站">餐廳網站</a></li></ul></li></ul></div><div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>
+                <div class="toc"><ul class="nav"><li class=""><a href="#建立專案" title="建立專案">建立專案</a></li><li><a href="#建立應用程式" title="建立應用程式">建立應用程式</a><ul class="nav"><li><a href="#使用模版" title="使用模版">使用模版</a></li><li><a href="#餐廳網站" title="餐廳網站">餐廳網站</a></li></ul></li></ul></div><div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>
             </ul>
         </div>
     </div>
     <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;"  >
-        <div class="toc"><ul class="nav"><li class=""><a href="#建立專案" title="建立專案">建立專案</a></li><li class=""><a href="#建立應用程式" title="建立應用程式">建立應用程式</a><ul class="nav"><li class=""><a href="#使用模版" title="使用模版">使用模版</a></li><li class=""><a href="#餐廳網站" title="餐廳網站">餐廳網站</a></li></ul></li></ul></div><div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>
+        <div class="toc"><ul class="nav"><li class=""><a href="#建立專案" title="建立專案">建立專案</a></li><li><a href="#建立應用程式" title="建立應用程式">建立應用程式</a><ul class="nav"><li><a href="#使用模版" title="使用模版">使用模版</a></li><li><a href="#餐廳網站" title="餐廳網站">餐廳網站</a></li></ul></li></ul></div><div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>
     </div>
- 
